--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                                     <p><i class="bi bi-2-circle"></i> <span>[</span> I enjoyed most creating the
                                         appointment section. <span>]</span></p>
 
-                                    <a type="btn" id="" href="./gif/hospital-project-one/index.html"
+                                    <a type="btn" id="" href="https://rg4025.github.io/hospitalProject/"
                                         target="_blank">View Project</a>
                                 </div>
 
@@ -523,7 +523,7 @@
                                     <p><i class="bi bi-2-circle"></i> <span>[</span> I enjoyed most creating the Our
                                         Hotel in world section. <span>]</span></p>
 
-                                    <a type="btn" id="" href="./gif/second-project-hotel/index.html"
+                                    <a type="btn" id="" href="https://rg4025.github.io/hotelProjectTwo/"
                                         target="_blank">View Project</a>
                                 </div>
                             </div>
