--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         <div class="text-3 "><span class="typing"></span></div>
                         <div class="d-flex align-items-center">
                             <div>
-                                <a href="./pdfs/Resume_RushiGurav.pdf" target="_blank">Download CV </a>
+                                <a href="./pdfs/Resume_RushikeshGurav.pdf" target="_blank">Download CV </a>
                             </div>
                             <div class="ms-2">
                                 <a href="#contact">Hire Me </a>
@@ -305,7 +305,7 @@
 
 
                             <div class="sec_four_third_child3 col-12 col-md-6 ms-xl-5 mt-5 mt-md-0">
-                                <a href="./pdfs/Resume_RushiGurav.pdf" target="_blank">View Resume &nbsp;<i
+                                <a href="./pdfs/Resume_RushikeshGurav.pdf" target="_blank">View CV &nbsp;<i
                                         class="bi bi-arrow-right-circle"></i></a>
                             </div>
                         </div>
