--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
                         </div>
                         <div class="text pt-2 pb-3">
-                            I'm Rushikesh Gurav <b class="about_bold">Frontend Developer</b>
+                            I'm Rushikesh Gurav <b class="about_bold">Java Full Stack Developer</b>
                             <!-- <span class="typing"></span> -->
                             <!-- <span class="typing2">.</span> -->
                         </div>
@@ -281,11 +281,11 @@
                                             target="_blank"><span><i class="bi bi-linkedin"></i></span></a>
                                     </div>
 
-                                    <div class="d-inline" data-aos="flip-down">
+                                    <!-- <div class="d-inline" data-aos="flip-down">
 
                                         <a href="https://www.instagram.com/rg_4025/" target="_blank"><span><i
                                                     class="bi bi-instagram"></i></span></a>
-                                    </div>
+                                    </div> -->
 
                                     <div class="d-inline" data-aos="flip-left">
 
@@ -1191,8 +1191,8 @@
                                 <div class="mt-2" data-aos="fade-left">
                                     <a class="" href="https://www.linkedin.com/in/rushikesh-gurav-2694b0234/"
                                         target="_blank"><span><i class="bi bi-linkedin "></i></span></a>
-                                    <a href="https://www.instagram.com/rg_4025/" target="_blank"><span><i
-                                                class="bi bi-instagram"></i></span></a>
+                                    <!-- <a href="https://www.instagram.com/rg_4025/" target="_blank"><span><i
+                                                class="bi bi-instagram"></i></span></a> -->
                                     <a href="https://twitter.com/RG4025" target="_blank"><span><i
                                                 class="bi bi-twitter-x"></i></span></a>
                                     <a href="https://github.com/RG4025" target="_blank"><span><i
